--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,7 @@ body {
   font-family: "OpenSans";
   overflow-x: hidden;
   width: 100%;
+  scroll-behavior: smooth;
 }
 .card-photo .card-image {
   background-image: url("/images/profilepic1.jpg");
