--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,13 @@
-$body-font-family: 'OpenSans', serif;
-// $headings: (
-//   'h1': (
-//     'size': 3.3125rem,
-//     'line-height': 1.15em
-//   ),
-//   'h2': (
-//     'size': 2.25rem,
-//     'line-height': 1.5em
+$body-font-family: 'Poppins', serif;
+$headings: (
+  
+  'h3': (
+    'line-height': 1.25em
+  ),
+//   'body-1':(
+//       'size':1.125rem,
+//       'weight': 400,
+//       'line-height':1.8rem,
+
 //   )
-// );
+);
