ref: test stream

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -53,6 +53,19 @@ body {
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.font-2 {
+  font-family: 'Limelight' !important;
+}
+
+.slide-up {
+  animation: slide-up ease .5s forwards 1.2s;
+}
+
+@keyframes slide-up {
+  0% {transform: translateY(0);}
+  100% {transform: translateY(-40px);opacity:1;}
+}
+
 .left-content {
   display: flex;
   flex-direction: column;
