--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,47 @@ body {
   width: 100%;
   scroll-behavior: smooth;
 }
+.is-absolute {
+  position: absolute;
+}
+.is-relative {
+  position: relative;
+}
+.is-fixed {
+  position: fixed;
+}
+section {
+  opacity: 0;
+  animation: load_up 1s forwards;
+  -webkit-animation: load_up 1s forwards;
+}
+.v-image__image,
+video {
+  opacity: 0;
+  animation: load_up 2s forwards;
+  -webkit-animation: load_up 2s forwards;
+}
+
+@keyframes load_up {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@-webkit-keyframes load_up {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 .card-photo .card-image {
   background-image: url("/images/profilepic1.jpg");
   background-repeat: no-repeat;
