ref: new design

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
-$body-font-family: 'Work Sans', serif;
+$body-font-family: 'Poppins', serif;
+$display-font-family: 'Poppins', serif;
 $headings: (
   
   'h3': (
