--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,7 +5,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   scroll-behavior: smooth;
-  background: black;
+  /* background: black; */
 }
 .is-absolute {
   position: absolute;
