ref: gradient work card

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,6 +16,9 @@ body {
 .is-fixed {
   position: fixed;
 }
+.pointer {
+  cursor: pointer;
+}
 section {
   opacity: 0;
   animation: load_up 1s forwards;
