--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,8 +19,20 @@ body {
 .pointer {
   cursor: pointer;
 }
+.opacity-1{
+  opacity: 1;
+}
 .opacity-8{
   opacity: 0.8;
+}
+.opacity-5{
+  opacity: 0.5;
+}
+.opacity-6{
+  opacity: 0.6;
+}
+.opacity-7{
+  opacity: 0.7;
 }
 section {
   opacity: 0;
