--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,11 @@ body {
 .is-absolute {
   position: absolute;
 }
+.is-center {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .is-relative {
   position: relative;
 }
