--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
-$body-font-family: 'Poppins', serif;
-$display-font-family: 'Poppins', serif;
+$body-font-family: 'Poppins',sans-serif;
+$display-font-family: 'Poppins';
 $headings: (
   
   'h3': (
